syntax = "proto3";

service LocalChain {
  rpc AddPeer(AddPeerRequest) returns (AddPeerResponse) {}
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse) {}
  rpc AddVoter(AddVoterRequest) returns (AddVoterResponse) {}
  rpc AddTransaction(AddTransactionRequest) returns (AddTransactionResponse) {}
}

message AddPeerRequest {
  string id = 1;
  string address = 2;
}

message AddPeerResponse {
  bool success = 1;
}

message RemovePeerRequest {
  string id = 1;
  string address = 2;
}

message RemovePeerResponse {
  bool success = 1;
}

message AddVoterRequest {
  string id = 1;
  string address = 2;
}

message AddVoterResponse {
  bool success = 1;
}

message AddTransactionRequest {
  bytes sender = 1;
  bytes receiver = 2;
  Amount amount = 3;
  repeated Utxo utxos = 4;
}

message AddTransactionResponse {
  bool success = 1;
}

message Amount {
  uint64 value = 1;
  uint32 unit = 2;
}

message Utxo {
  bytes txHash = 1;
  uint32 index = 2;
}